# bevy-poc

./: .cnb.yml  .cursorignore  .cursorrules  .gitignore  Cargo.toml  FIX_LOG.md  _count.rs  _handoff_utf8.txt  brp_cards.json  brp_cards2.json  brp_diag.json  brp_final.json  brp_methods.json  brp_now.json  brp_registry.json  brp_s.txt  brp_stats.json  brp_test.json  brp_transforms.json  brp_v4.json  run-handoff.sh  session_report.txt
.cargo/: config.toml
.githooks/: pre-push
AIMemory/: PROTOCOL.md  code-pattern-index.md  current.md  design-philosophy-v5.md  design-principles.md  design_ecology-chase-sprint_deepseek-v4.md  design_flock-group-encapsulation_deepseek-v4.md  design_flock-system_deepseek-v4.md  design_human-readable_v4.md  design_interaction-system_deepseek-v4.md  design_machine-readable_v4.md  design_movement-animation-standards_deepseek-v4.md  design_observer-architecture_deepseek-v4.md  design_rete-rule-index_deepseek-v4.md  fix-log.md  governance.md  handoff_activate-player.md  handoff_add-brp.md  handoff_astar-replace-bfs_deepseek-v4.md  handoff_audit-cleanup_deepseek-v4.md  handoff_batch-uniform-updates.md  handoff_bevy-m1-carddb-worldrules_deepseek-v4.md  handoff_bevy-m2-behaviors_deepseek-v4.md  handoff_bevy-m3-egui_deepseek-v4.md  handoff_bevy-m3-ui_deepseek-v4.md  handoff_bevy-m3-visual-restore_deepseek-v4.md  handoff_bevy-phase5-player-ai_deepseek-v4.md  handoff_bevy-poc_deepseek-v4.md  handoff_bfs-optimize_deepseek-v4.md  handoff_brp-states.md  handoff_bulletin-board.md  handoff_capability-hunt-fragment_deepseek-v4.md  handoff_capacity-fix.md  (+108 more)
(+157 files in other folders)
