[package]
name = "bevy-poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_poc"
path = "src/lib.rs"

[[bin]]
name = "bevy-poc"
path = "src/main.rs"

[profile.test]
opt-level = 2

[dependencies]
bevy = { version = "0.15", features = ["bevy_remote"] }
bevy_egui = "0.31"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
smallvec = "1.13"
